tratando de contentar al linter. mejoramos init.sql

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,12 @@
 /__pycache__/
 flycheck_main.py
 database.db
-/todo.org
-todo.norg
-nada.py
+todo.org
 nada.py
 components.py
 .vscode/settings.json
 utils/trans.sql
-utils/trans.sql
 tags
 tags
-tests/test.py
 tests/
-database.sqlite3
 database.sqlite3
